--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ pandas>=0.22.0
 scipy>=0.19.1
 scikit-learn>=0.19.1
 torch>=1.0.0
-matplotlib
-seaborn
+tqdm>=4.28.1
+matplotlib>=3.0.2
+seaborn>=0.9.0
